--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -3,13 +3,16 @@
   border: 1px solid black;
   border-radius: 8px;
   overflow: hidden;
+  box-shadow: rgb(243, 243, 243) 3px 5px 20px;
+  width: 200px;
+  height: 300px;
 }
 
 .componentContainer {
-  width: 200px;
-  height: 300px;
   padding: 6px;
   position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 .textOverlay {
@@ -19,7 +22,7 @@
   right: 0;
   z-index: 1;
   height: 180px;
-  background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(3, 3, 25, 1));
+  background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(3, 3, 25, 1), rgba(3, 3, 25, 1));
 }
 
 .art {
@@ -33,19 +36,59 @@
   z-index: 0;
 }
 
+.type {
+  position: absolute;
+  z-index: 2;
+  color: black;
+  left: 50%;
+  top: 0%;
+  transform: translate(-50%, 0);
+  text-transform: uppercase;
+  white-space: nowrap;
+  letter-spacing: 1.5px;
+  background: white;
+  padding: 6px;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+
+.attributes {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  left: 50%;
+  top: 30px;
+  transform: translate(-50%, 0);
+  text-transform: uppercase;
+  white-space: nowrap;
+  letter-spacing: 1.5px;
+  background: darkorange;
+  padding: 6px;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 3px;
+  font-size: 12px;
+}
+
 .name {
   position: absolute;
   z-index: 2;
   color: white;
   left: 50%;
-  top: 60%;
+  top: 53%;
   transform: translate(-50%, 0);
   text-transform: uppercase;
   white-space: nowrap;
   letter-spacing: 1.5px;
+  font-weight: bold;
+  &.isSpell {
+    background: darkorange;
+    color: white;
+    border-radius: 9999px;
+    padding: 2px 8px;
+  }
 }
 
-.costToBuy {
+.costToBuy, .costToPlay, .mana {
   position: absolute;
   z-index: 2;
   width: 40px;
@@ -59,15 +102,37 @@
   font-size: 30px;
 }
 
+.costToPlay {
+  right: 0;
+  background: dodgerblue;
+}
+.mana {
+  right: 6px;
+  bottom: 6px;
+  background: purple;
+}
+
 .description {
   position: absolute;
   z-index: 2;
-  left: 16px;
-  right: 16px;
-  bottom: 40px;
+  left: 12px;
+  right: 12px;
+  height: 84px;
+  bottom: 30px;
   color: #d3eeff;
   font-size: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  flex-direction: column;
+}
+.description2 {
+  margin-top: 6px;
+  font-size: 14px;
+}
+.underline {
+  text-decoration: underline;
 }
 
 .attack, .defense {
