--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -1,11 +1,14 @@
+@import 'variables';
+
 :host {
   display: block;
   border: 1px solid black;
   border-radius: 8px;
   overflow: hidden;
   box-shadow: rgb(243, 243, 243) 3px 5px 20px;
-  width: 200px;
-  height: 300px;
+  width: $card-width;
+  height: $card-width * 1.3;
+  font-size: $card-width * 0.08;
 }
 
 .componentContainer {
@@ -21,7 +24,7 @@
   left: 0;
   right: 0;
   z-index: 1;
-  height: 180px;
+  height: $card-width * 0.8;
   background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(3, 3, 25, 1), rgba(3, 3, 25, 1));
 }
 
@@ -57,7 +60,7 @@
   z-index: 2;
   color: white;
   left: 50%;
-  top: 30px;
+  top: $card-width * 0.2;
   transform: translate(-50%, 0);
   text-transform: uppercase;
   white-space: nowrap;
@@ -66,7 +69,7 @@
   padding: 6px;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
-  font-size: 12px;
+  font-size: $card-width * 0.06;
 }
 
 .name {
@@ -74,7 +77,7 @@
   z-index: 2;
   color: white;
   left: 50%;
-  top: 53%;
+  top: $card-width * 0.6;
   transform: translate(-50%, 0);
   text-transform: uppercase;
   white-space: nowrap;
@@ -91,19 +94,19 @@
 .costToBuy, .costToPlay, .mana {
   position: absolute;
   z-index: 2;
-  width: 40px;
-  height: 40px;
+  width: $card-width * 0.2;
+  height: $card-width * 0.2;
   border-radius: 100%;
   background: darkblue;
   display: flex;
   justify-content: center;
   align-items: center;
   color: whitesmoke;
-  font-size: 30px;
+  font-size: $card-width * 0.1;
 }
 
 .costToPlay {
-  right: 0;
+  right: 6px;
   background: dodgerblue;
 }
 .mana {
@@ -117,10 +120,10 @@
   z-index: 2;
   left: 12px;
   right: 12px;
-  height: 84px;
-  bottom: 30px;
+  height: $card-width * 0.3;
+  bottom: $card-width * 0.25;
   color: #d3eeff;
-  font-size: 16px;
+  font-size: 1.6vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -129,7 +132,7 @@
 }
 .description2 {
   margin-top: 6px;
-  font-size: 14px;
+  font-size: 1.5vh;
 }
 .underline {
   text-decoration: underline;
@@ -140,8 +143,8 @@
   z-index: 2;
   left: 0px;
   bottom: 0px;
-  height: 24px;
-  width: 40px;
+  height: 3vh;
+  width: 6vh;
   background: orange;
   display: flex;
   justify-content: center;
