--- a/src/app/draw-pile/draw-pile.component.scss
+++ b/src/app/draw-pile/draw-pile.component.scss
@@ -1,7 +1,6 @@
+@import "variables";
 :host {
   display: block;
-  width: 120px;
-  height: 180px;
   background: lightgoldenrodyellow;
 }
 button {
