--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -7,8 +7,9 @@
   overflow: hidden;
   box-shadow: rgb(243, 243, 243) 3px 5px 20px;
   width: $card-width;
-  height: $card-width * 1.3;
+  height: $card-height;
   font-size: $card-width * 0.08;
+
 }
 
 .componentContainer {
@@ -16,6 +17,9 @@
   position: relative;
   height: 100%;
   width: 100%;
+  > * {
+    pointer-events: none;
+  }
 }
 
 .textOverlay {
@@ -59,17 +63,18 @@
   position: absolute;
   z-index: 2;
   color: white;
+  height: $card-width * 0.12;
+  width: $card-width * 0.5;
   left: 50%;
-  top: $card-width * 0.2;
+  bottom: 0;
   transform: translate(-50%, 0);
-  text-transform: uppercase;
   white-space: nowrap;
-  letter-spacing: 1.5px;
-  background: darkorange;
-  padding: 6px;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   font-size: $card-width * 0.06;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .name {
@@ -77,7 +82,10 @@
   z-index: 2;
   color: white;
   left: 50%;
-  top: $card-width * 0.6;
+  top: $card-width * 0.95;
+  &.hasDescription {
+    top: $card-width * 0.6;
+  }
   transform: translate(-50%, 0);
   text-transform: uppercase;
   white-space: nowrap;
@@ -94,8 +102,8 @@
 .costToBuy, .costToPlay, .mana {
   position: absolute;
   z-index: 2;
-  width: $card-width * 0.2;
-  height: $card-width * 0.2;
+  width: $card-width * 0.15;
+  height: $card-width * 0.15;
   border-radius: 100%;
   background: darkblue;
   display: flex;
@@ -121,9 +129,9 @@
   left: 12px;
   right: 12px;
   height: $card-width * 0.3;
-  bottom: $card-width * 0.25;
+  bottom: $card-width * 0.22;
   color: #d3eeff;
-  font-size: 1.6vh;
+  font-size: $card-width * 0.07;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -132,7 +140,7 @@
 }
 .description2 {
   margin-top: 6px;
-  font-size: 1.5vh;
+  font-size: $card-width * 0.065;
 }
 .underline {
   text-decoration: underline;
@@ -143,14 +151,14 @@
   z-index: 2;
   left: 0px;
   bottom: 0px;
-  height: 3vh;
-  width: 6vh;
+  height: $card-width * 0.12;
+  width: $card-width * 0.2;
   background: orange;
   display: flex;
   justify-content: center;
   align-items: center;
   color: whitesmoke;
-  font-size: 22px;
+  font-size: $card-width * 0.1;
   text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
   border-radius: 3px;
 }
@@ -159,4 +167,14 @@
   left: initial;
   right: 0px;
   background: dodgerblue;
+}
+
+.selected {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  background: whitesmoke;
+  bottom: 0;
+  left: 50%;
+  z-index: 10;
 }
