add keyboard short cuts

--- a/src/app/playing-field/playing-field.component.html
+++ b/src/app/playing-field/playing-field.component.html
@@ -52,7 +52,7 @@
         (requestNewPile)="discardPileToDraw()"
     ></app-draw-pile>
     <app-discard-pile #discardPile (click)="discardCard()"></app-discard-pile>
-    <div #trash class="trash"></div>
+    <button #trash class="trash" (click)="trashCard()">Trash</button>
 
     <div class="battleAndStation">
         <div class="station">
