--- a/src/app/playing-field/playing-field.component.scss
+++ b/src/app/playing-field/playing-field.component.scss
@@ -52,6 +52,11 @@ app-discard-pile {
   left: 100px;
   bottom: 10px;
 }
+.trash {
+  position: absolute;
+  left: 100px;
+  bottom: 50px;
+}
 app-draw-pile {
   position: absolute;
   left: 200px;
