--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -178,3 +178,16 @@
   left: 50%;
   z-index: 10;
 }
+
+.cardBack {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 50;
+  background-image: url("https://media.istockphoto.com/id/1160720443/vector/abstract-simple-geometric-vector-seamless-pattern-with-gold-line-texture-on-white-background.jpg?s=612x612&w=0&k=20&c=_kgBISj1Wio4LTRdBFN3IttmunACCl1-T5VKdurvb68=");
+  button {
+    pointer-events: initial !important;
+  }
+}
