--- a/src/app/playing-field/playing-field.component.scss
+++ b/src/app/playing-field/playing-field.component.scss
@@ -108,3 +108,11 @@ app-hand {
     z-index: 1000 !important;
   }
 }
+
+.opponentMana {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  display: flex;
+  flex-direction: column;
+}
