--- a/src/app/playing-field/playing-field.component.scss
+++ b/src/app/playing-field/playing-field.component.scss
@@ -62,6 +62,13 @@ app-draw-pile {
   left: 200px;
   bottom: 10px;
 }
+.playerButtons {
+  position: absolute;
+  left: 260px;
+  bottom: 10px;
+  display: flex;
+  flex-direction: column;
+}
 
 .manaStack {
   position: fixed;
