--- a/src/app/playing-field/playing-field.component.html
+++ b/src/app/playing-field/playing-field.component.html
@@ -161,5 +161,6 @@
             (onSelect)="selectCard($event)"
             [hideCard]="card.isHidden"
             (onShow)="showCard(card)"
+            (onActivate)="activateCard(card)"
     ></app-card>
 </ng-template>
