--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -21,5 +21,7 @@
 
     <div class="cardBack" *ngIf="hideCard">
         <button (click)="onShow.emit()">show</button>
+        <button (click)="onActivate.emit()">Activate</button>
+        <div class="notActive" *ngIf="!cardData.activated"></div>
     </div>
 </div>
