--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -87,7 +87,6 @@
   }
   transform: translate(-50%, 0);
   text-transform: uppercase;
-  white-space: nowrap;
   letter-spacing: 1.5px;
   font-weight: bold;
   &.isSpell {
@@ -96,6 +95,9 @@
     border-radius: 9999px;
     padding: 2px 8px;
   }
+  width: 100%;
+  max-width: 95%;
+  text-align: center;
 }
 
 .costToBuy, .costToPlay, .mana {
@@ -192,5 +194,13 @@
   background-image: url("https://media.istockphoto.com/id/1160720443/vector/abstract-simple-geometric-vector-seamless-pattern-with-gold-line-texture-on-white-background.jpg?s=612x612&w=0&k=20&c=_kgBISj1Wio4LTRdBFN3IttmunACCl1-T5VKdurvb68=");
   button {
     pointer-events: initial !important;
+  }
+  .notActive {
+    position: absolute;
+    top: 25%;
+    left: 25%;
+    right: 25%;
+    bottom: 25%;
+    background: red;
   }
 }
