hopefully fix shop and 5 more station

--- a/src/app/playing-field/playing-field.component.html
+++ b/src/app/playing-field/playing-field.component.html
@@ -126,6 +126,24 @@
                 <button (click)="putCard('station8')">+</button>
             </div>
         </div>
+        <div class="station">
+            <div>
+                <app-card-hold-space #station9 [tpl]="stationTpl" dest="station9"></app-card-hold-space>
+                <button (click)="putCard('station9')">+</button>
+            </div>
+            <div>
+                <app-card-hold-space #station10 [tpl]="stationTpl" dest="station10"></app-card-hold-space>
+                <button (click)="putCard('station10')">+</button>
+            </div>
+            <div>
+                <app-card-hold-space #station11 [tpl]="stationTpl" dest="station11"></app-card-hold-space>
+                <button (click)="putCard('station11')">+</button>
+            </div>
+            <div>
+                <app-card-hold-space #station12 [tpl]="stationTpl" dest="station12"></app-card-hold-space>
+                <button (click)="putCard('station12')">+</button>
+            </div>
+        </div>
     </div>
 </div>
 
