--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -7,18 +7,30 @@
   box-shadow: rgb(243, 243, 243) 3px 5px 20px;
   width: $card-width;
   height: $card-height;
-  font-size: $card-width * 0.08;
+  font-size: $card-width * 0.05;
 
 }
 
 .componentContainer {
-  padding: 6px;
+  padding: 5px;
   position: relative;
   height: 100%;
   width: 100%;
   > * {
     pointer-events: none;
+  };
+}
+.cardFront {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  img {
+    width: 100%;
+    height: 100%;
   }
+  z-index: 2;
 }
 
 .textOverlay {
@@ -81,10 +93,7 @@
   z-index: 2;
   color: white;
   left: 50%;
-  top: $card-width * 0.95;
-  &.hasDescription {
-    top: $card-width * 0.6;
-  }
+  top: $card-width * 0.84;
   transform: translate(-50%, 0);
   text-transform: uppercase;
   letter-spacing: 1.5px;
@@ -106,7 +115,6 @@
   width: $card-width * 0.15;
   height: $card-width * 0.15;
   border-radius: 100%;
-  background: darkblue;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -115,8 +123,7 @@
 }
 
 .costToPlay {
-  right: 6px;
-  background: dodgerblue;
+  margin-left: $card-width * 0.15;
 }
 .mana {
   right: 6px;
@@ -129,10 +136,10 @@
   z-index: 2;
   left: 12px;
   right: 12px;
-  height: $card-width * 0.3;
-  bottom: $card-width * 0.22;
+  height: $card-width * 0.4;
+  bottom: $card-width * 0.07;
   color: #d3eeff;
-  font-size: $card-width * 0.07;
+  font-size: $card-width * 0.05;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -140,8 +147,8 @@
   flex-direction: column;
 }
 .description2 {
-  margin-top: 6px;
-  font-size: $card-width * 0.065;
+  margin-top: 2px;
+  font-size: $card-width * 0.04;
 }
 .underline {
   text-decoration: underline;
@@ -150,11 +157,12 @@
 .attack, .defense {
   position: absolute;
   z-index: 2;
-  left: 0px;
-  bottom: 0px;
+  left: 0;
+  right: 0;
+  bottom: $card-width * 0.5;
   height: $card-width * 0.12;
-  width: $card-width * 0.2;
-  background: orange;
+  width: 100%;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -167,7 +175,7 @@
 .defense {
   left: initial;
   right: 0px;
-  background: dodgerblue;
+  display: none;
 }
 
 .selected {
