better image ratio

--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -14,7 +14,7 @@
             {{cardData.description2}}
         </div>
     </div>
-    <img class="art" [src]="'/assets/art/'+cardData.artSrc" />
+    <img class="art" [ngStyle]="{'background-image': 'url(\'/assets/art/' + cardData.artSrc + '\')'}"  />
     <div class="textOverlay"></div>
 
     <div class="attack" *ngIf="hasAttack()">{{cardData.attack ?? cardData.power}}</div>
