--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -12,7 +12,6 @@
 }
 
 .componentContainer {
-  padding: 5px;
   position: relative;
   height: 100%;
   width: 100%;
@@ -39,8 +38,8 @@
   left: 0;
   right: 0;
   z-index: 1;
-  height: $card-width * 0.8;
-  background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(3, 3, 25, 1), rgba(3, 3, 25, 1));
+  height: $card-width * 0.6;
+  background-image: linear-gradient(to bottom, rgba(255, 0, 0, 0), rgba(3, 3, 25, 1) 10%, rgba(3, 3, 25, 1));
 }
 
 .art {
@@ -50,8 +49,9 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
+  height: 60%;
   z-index: 0;
+  background-size: cover;
 }
 
 .type {
@@ -112,6 +112,8 @@
 .costToBuy, .costToPlay, .mana {
   position: absolute;
   z-index: 2;
+  top: $card-width * 0.034;
+  left: $card-width * 0.037;
   width: $card-width * 0.15;
   height: $card-width * 0.15;
   border-radius: 100%;
